--- a/src/Components/Style/App.css
+++ b/src/Components/Style/App.css
@@ -1,10 +1,13 @@
 body {
-    display: block;
+    display: flex;
+    width: 100%;
+    justify-content: center;
     margin: 10px;
 }
 
 #root {
     display: block;
+    width: 50%;
 }
 
 .usersStyle {
