--- a/src/Components/Style/App.css
+++ b/src/Components/Style/App.css
@@ -1,3 +1,5 @@
+/* ListUsers Component */
+
 body {
     display: flex;
     width: 100%;
@@ -52,4 +54,81 @@ body {
     font-family: sans-serif;
     font-weight: bold;
     font-size: 80%;
+}
+
+/* Modal */
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.boxModal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.containerModal {
+    color: #000;
+    width: 30%;
+    height: 25%;
+    border-radius: 20px;
+}
+
+.containerHeaderModal {
+    background-color: rgba(50,52,79,1);
+    display: flex;
+    color: #fff;
+}
+
+.headerPay {
+    width: 100%;
+    height: 10%;
+    margin: 20px;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
+.containerBodyModal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+}
+
+.inputValue, .selectCard {
+    margin: 30px 30px 0px;
+    height: 4vh;
+    border-radius: 10px;
+    border-width: 1px;
+    background-color: #fff;
+    font-size: larger;
+    text-indent: 5px;
+    font-weight: bold;
+}
+
+.errorInput {
+    color: red;
+    text-align: center;
+    margin-bottom: auto;
+}
+
+#buttonPayModal {
+    margin: 30px 30px 20px;
+    height: 20%;
+    width: 30%;
+    align-self: center;
+    font-size: larger;
+    font-weight: bold;
 }
