Estilização inicial do ModalPay

--- a/src/Components/Style/App.css
+++ b/src/Components/Style/App.css
@@ -98,6 +98,10 @@ form {
     font-weight: bold;
 }
 
+.headerPay b {
+    color: yellow;
+}
+
 .containerBodyModal {
     display: flex;
     flex-direction: column;
@@ -132,3 +136,18 @@ form {
     font-size: larger;
     font-weight: bold;
 }
+
+/* Modal Pay */
+
+.modalPay {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
